syntax = "proto3";

package proto;
option go_package = "/proto";

//request & response
message AddRequest{
    int64 x = 1;
    int64 y = 2;
}

message AddResponse{
    int64 result = 1;
}

//client streaming
message AverageRequest{
    int64 no = 1;
}

message AverageResponse{
    int64 result = 1;
}

//server streaming
message PrimeNumberRequest{
    int64 rangeStart = 1;
    int64 rangeEnd = 2;
}

message PrimeNumberResponse{
    int64 primeNumber = 1;
}

//bidirectional streaming
message Greeting{
    string first_name = 1;
    string last_name = 2;
}

message GreetEveryoneRequest{
    Greeting greeting = 1;
}

message GreetEveryoneResponse{
    string message = 1;
}


service AppService{
    //request & response
    rpc Add(AddRequest) returns (AddResponse);

    //client streaming
    rpc Average(stream AverageRequest) returns (AverageResponse);

    //server streaming
    rpc GeneratePrime(PrimeNumberRequest) returns (stream PrimeNumberResponse);

    //bidirectional streaming
    rpc GreetEveryone(stream GreetEveryoneRequest) returns (stream GreetEveryoneResponse);
}